--- a/vignettes/Christensen_General_Library.bib
+++ b/vignettes/Christensen_General_Library.bib
@@ -1,4 +1,4 @@
-%Encoding: UTF-8
+% Encoding: UTF-8
 
 %A
 
@@ -214,13 +214,13 @@
   doi={10.1111/j.1749-818x.2008.00107.x},
 }
 
-@Manual{aust2018papaja,
+@manual{papaja,
     author = {Aust, Frederik and Barth, Marius},
     title = {{papaja}: {Create} {APA} manuscripts with {R Markdown}},
-    year = {2018},
-    note = {R package version 0.1.0.9842},
+    year = {2020},
+    note = {R package version 0.1.0.9997},
     url = {https://github.com/crsh/papaja},
-  }
+}
 
 %B
 
@@ -396,6 +396,17 @@
   doi={10.1080/13546783.2016.1278034},
 }
 
+@article{benjamini1995controlling,
+  title={Controlling the false discovery rate: a practical and powerful approach to multiple testing},
+  author={Benjamini, Yoav and Hochberg, Yosef},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={57},
+  pages={289--300},
+  year={1995},
+  publisher={Wiley Online Library},
+  doi={10.1111/j.2517-6161.1995.tb02031.x},
+}
+
 @article{bernaards2005gradient,
   title={Gradient projection algorithms and software for arbitrary rotation criteria in factor analysis},
   author={Bernaards, Coen A and Jennrich, Robert I},
@@ -477,6 +488,17 @@
   year={2008},
   publisher={IOP Publishing},
   doi={10.1088/1742-5468/2008/10/P10008},
+}
+
+@article{boateng2018best,
+  author    = {Boateng, Godfred O and Neilands, Torsten B and Frongillo, Edward A and Melgar-Qui{\~n}onez, Hugo R and Young, Sera L},
+  title     = {Best practices for developing and validating scales for health, social, and behavioral research: A primer},
+  journal   = {Frontiers in Public Health},
+  year      = {2018},
+  volume    = {6},
+  pages     = {149},
+  publisher = {Frontiers},
+  doi={10.3389/fpubh.2018.00149},
 }
 
 @article{boccaletti2006complex,
@@ -860,6 +882,22 @@
   doi={10.1037/0894-4105.9.2.177},
 }
 
+@manual{pwr,
+    title = {{pwr}: Basic Functions for Power Analysis},
+    author = {Champely, Stephane},
+    year = {2020},
+    note = {R package version 1.3-0},
+    url = {https://CRAN.R-project.org/package=pwr},
+}
+  
+@book{chatterjee2014aesthetic,
+  title={The aesthetic brain: How we evolved to desire beauty and enjoy art},
+  author={Chatterjee, Anjan},
+  year={2014},
+  publisher={Oxford University Press},
+  doi={10.1093/acprof:oso/9780199811809.001.0001},
+}
+
 @article{chen2008extended,
   title={Extended Bayesian information criteria for model selection with large model spaces},
   author={Chen, Jiahua and Chen, Zehua},
@@ -944,7 +982,15 @@
     url = {https://CRAN.R-project.org/package=SemNetDictionaries},
   }
   
-  @article{christensen2020estimating,
+  @article{christensen2020unique,
+  title={Unique variable analysis: A novel approach for detecting redundant variables in multivariate data},
+  author={Christensen, Alexander P and Garrido, Luis Eduardo and Golino, Hudson},
+  year={2020},
+  journal={PsyArXiv},
+  doi={10.31234/osf.io/4kra2},
+}
+  
+@article{christensen2020estimating,
   title={Estimating factors with psychometric networks: A {Monte Carlo} simulation comparing community detection algorithms},
   author={Christensen, Alexander P and Golino, Hudson},
   year={2020},
@@ -1004,9 +1050,11 @@ doi={10.31234/osf.io/eht87},
 }
 
 @article{christensen2019psychometric,
-title = {A Psychometric Network Perspective on the Validity and Validation of Personality Trait Questionnaires},
+title = {A psychometric network perspective on the validity and validation of personality trait questionnaires},
 author = {Christensen, Alexander P and Golino, Hudson and Silvia, Paul J},
 year={2020},
+volume={34},
+pages={1095--1108},
 journal = {European Journal of Personality},
 doi={10.1002/per.2265},
 }
@@ -1087,6 +1135,16 @@ doi={10.1002/per.2265},
   doi={10.1037/1040-3590.7.3.309},
 }
 
+@InCollection{clark2016,
+  author    = {Clark, L A and Watson, D},
+  title     = {Constructing validity: Basic issues in objective scale development.},
+  booktitle = {Methodological issues and strategies in clinical research},
+  year      = {2016},
+  editor    = {Kazdin, A E},
+  publisher = {American Psychological Association},
+  doi       = {10.1037/14805-012},
+}
+
 @article{fastgreedy,
   title={Finding community structure in very large networks},
   author={Clauset, Aaron and Newman, Mark E J and Moore, Cristopher},
@@ -1119,6 +1177,17 @@ doi={10.1002/per.2265},
   doi={10.1037/0033-2909.112.1.155},
 }
 
+@article{cole2007insidious,
+  title={The insidious effects of failing to include design-driven correlated residuals in latent-variable covariance structure analysis},
+  author={Cole, David A and Ciesla, Jeffrey A and Steiger, James H},
+  journal={Psychological Methods},
+  volume={12},
+  pages={381},
+  year={2007},
+  publisher={American Psychological Association},
+  doi={10.1037/1082-989X.12.4.381},
+}
+
 @article{collins1975spreading,
   title={A spreading-activation theory of semantic processing},
   author={Collins, Allan M and Loftus, Elizabeth F},
@@ -1128,6 +1197,17 @@ doi={10.1002/per.2265},
   year={1975},
   publisher={American Psychological Association},
   doi={10.1037/0033-295X.82.6.407},
+}
+
+@article{comrey1988factor,
+  author    = {Comrey, Andrew L},
+  title     = {Factor-analytic methods of scale development in personality and clinical psychology},
+  journal   = {Journal of Consulting and Clinical Psychology},
+  year      = {1988},
+  volume    = {56},
+  pages     = {754--761},
+  publisher = {American Psychological Association},
+  doi={10.1037/0022-006X.56.5.754},
 }
 
 @book{comrey2013first,
@@ -1145,6 +1225,14 @@ doi={10.1002/per.2265},
   year={2018},
   journal={PsyArXiv},
   doi={10.31234/osf.io/sc4p9},
+}
+
+@article{condon2020bottom,
+  title={Bottom up construction of a personality taxonomy},
+  author={Condon, David M and Wood, Dustin and M{\~o}ttus, Ren{\'e} and Booth, Tom and Costantini, Giulio and Greiff, Samuel and Johnson, Wendy and Lukaszewski, Aaron and Murray, Aja Louise and Revelle, William and others},
+  year={2020},
+  publisher={PsyArXiv},
+  doi={10.31234/osf.io/u2n7s},
 }
 
 @article{connelly2014introducing,
@@ -1167,6 +1255,17 @@ doi={10.1002/per.2265},
   year={2014},
   publisher={Taylor \& Francis},
   doi={10.1080/00223891.2013.809355},
+}
+
+@article{cooper2019pitfalls,
+  title={Pitfalls of personality theory},
+  author={Cooper, Colin},
+  journal={Personality and Individual Differences},
+  volume={151},
+  pages={109551},
+  year={2019},
+  publisher={Elsevier},
+  doi={10.1016/j.paid.2019.109551},
 }
 
 @article{cortina1993coefficient,
@@ -1917,7 +2016,7 @@ doi={10.1002/per.2265},
   journal = {Journal of Statistical Software},
   volume = {25},
   pages = {1--54},
-  url = {https://www.jstatsoft.org/v25/i05/},
+  doi = {https://doi.org/10.18637/jss.v025.i05},
 }
 
 @article{festinger1954theory,
@@ -2235,8 +2334,19 @@ doi={10.1002/per.2265},
   doi={10.1037/a0030005},
 }
 
+@article{garrido2020small,
+  title={Is small still beautiful for the {Strengths and Difficulties Questionnaire?} Novel findings using exploratory structural equation modeling},
+  author={Garrido, Luis Eduardo and Barrada, Juan Ramón and Aguasvivas, José Armando and Martínez-Molina, Agustín and Arias, Víctor B and Golino, Hudson F and Legaz, Eva and Ferrís, Gloria and Rojo-Moreno, Luis},
+  journal={Assessment},
+  volume={27},
+  pages={1349--1367},
+  year={2020},
+  publisher={Sage Publications Sage CA: Los Angeles, CA},
+  doi={10.1177/1073191118780461},
+}
+
 @article{gates2016monte,
-  title={A Monte Carlo evaluation of weighted community detection algorithms},
+  title={A {Monte Carlo} evaluation of weighted community detection algorithms},
   author={Gates, Kathleen M and Henry, Teague and Steinley, Doug and Fair, Damien A},
   journal={Frontiers in Neuroinformatics},
   volume={10},
@@ -2244,6 +2354,17 @@ doi={10.1002/per.2265},
   year={2016},
   publisher={Frontiers},
   doi={10.3389/fninf.2016.00045},
+}
+
+@article{gerbing1984meaning,
+  title={On the meaning of within-factor correlated measurement errors},
+  author={Gerbing, David W and Anderson, James C},
+  journal={Journal of Consumer Research},
+  volume={11},
+  pages={572--580},
+  year={1984},
+  publisher={The University of Chicago Press},
+  doi={10.1086/208993},
 }
 
 @incollection{geukes2017analyzing,
@@ -2314,12 +2435,22 @@ doi={10.1002/per.2265},
   editor = {Mervielde, I and Deary, Ian and De Fruyt, F and Ostendorf, Frank},
   address = {Tilburg, The Netherlands},
 }
+@article{goldstein1980dimensionality,
+  title={Dimensionality, bias, independence and measurement scale problems in latent trait test score models},
+  author={Goldstein, Harvey},
+  journal={British Journal of mathematical and statistical psychology},
+  volume={33},
+  pages={234--246},
+  year={1980},
+  publisher={Wiley Online Library},
+  doi={10.1111/j.2044-8317.1980.tb00610.x},
+}
 
-@manual{ega,
+@manual{EGAnet,
     title = {EGAnet: {Exploratory Graph Analysis}-- A Framework for Estimating the Number of Dimensions in Multivariate Data Using Network Psychometrics},
     author = {Golino, Hudson and Christensen, Alexander P},
     year = {2020},
-    note = {R package version 0.9.3},
+    note = {R package version 0.9.8},
     url = {https://CRAN.R-project.org/package=EGAnet},
   }
   
@@ -2404,6 +2535,25 @@ doi = {10.1080/00273171.2020.1779642},
   doi={10.1073/pnas.2005238117},
 }
 
+@article{goretzko2019not,
+  title={Not very powerful: The influence of negations and vague quantifiers on the psychometric properties of questionnaires.},
+  author={Goretzko, David and Pargent, Florian and Sust, Larissa NN and B{\"u}hner, Markus},
+  journal={European Journal of Psychological Assessment},
+  year={2019},
+  publisher={Hogrefe Publishing},
+  doi={10.1027/1015-5759/a000539},
+}
+
+@article{goretzko2019exploratory,
+  title={Exploratory factor analysis: Current use, methodological developments and recommendations for good practice},
+  author={Goretzko, David and Pham, Trang Thien Huong and B{\"u}hner, Markus},
+  journal={Current Psychology},
+  pages={1--12},
+  year={2019},
+  publisher={Springer},
+  doi={10.1007/s12144-019-00300-2},
+}
+
 @article{green1977limitations,
   title={Limitations of coefficient alpha as an index of test unidimensionality},
   author={Green, Samuel B and Lissitz, Robert W and Mulaik, Stanlen A},
@@ -2413,6 +2563,17 @@ doi = {10.1080/00273171.2020.1779642},
   year={1977},
   publisher={Sage Publications Sage CA: Thousand Oaks, CA},
   doi={10.1177/001316447703700403},
+}
+
+@article{green2009commentary,
+  title={Commentary on coefficient alpha: A cautionary tale},
+  author={Green, Samuel B and Yang, Yanyun},
+  journal={Psychometrika},
+  volume={74},
+  pages={121--135},
+  year={2009},
+  publisher={Springer},
+  doi={10.1007/s11336-008-9098-4},
 }
 
 @article{greengross2011humor,
@@ -2436,6 +2597,17 @@ doi = {10.1080/00273171.2020.1779642},
   doi={10.18637/jss.v017.i01},
 }
 
+@article{gross2018multidimensional,
+  title={The {Multidimensional Schizotypy Scale-Brief}: Scale development and psychometric properties},
+  author={Gross, Georgina M and Kwapil, Thomas R and Raulin, Michael L and Silvia, Paul J and Barrantes-Vidal, Neus},
+  journal={Psychiatry Research},
+  volume={261},
+  pages={7--13},
+  year={2018},
+  publisher={Elsevier},
+  doi={10.1016/j.psychres.2017.12.033},
+}
+
 @article{gross2014comparing,
   title={Comparing the factor structure of the {Wisconsin Schizotypy Scales} and the {Schizotypal Personality Questionnaire}},
   author={Gross, Georgina M and Mellin, Juliann and Silvia, Paul J and {Barrantes-Vidal}, Neus and Kwapil, Thomas R},
@@ -2445,6 +2617,15 @@ doi = {10.1080/00273171.2020.1779642},
   year={2014},
   publisher={Educational Publishing Foundation},
   doi={10.1037/per0000090},
+}
+
+@book{gujarati2008basic,
+  title={Basic econometrics},
+  author={Gujarati, Damodar N and Porter, Dawn C},
+  year={2008},
+  edition={5},
+  publisher={McGraw Hill},
+  address={New York, NY},
 }
 
 @article{guttman1953image,
@@ -2469,7 +2650,7 @@ doi = {10.1080/00273171.2020.1779642},
   doi={10.3389/fpsyg.2017.00798},
 }
 
-@article{gysi2018wto,
+@article{wTO,
   title={{wTO}: An {R} package for computing weighted topological overlap and a consensus network with integrated visualization tool},
   author={Gysi, Deisy Morselli and Voigt, Andre and {de} Miranda Fragoso, Tiago and Almaas, Eivind and Nowick, Katja},
   journal={BMC Bioinformatics},
@@ -2627,6 +2808,17 @@ doi = {10.1080/00273171.2020.1779642},
   year={2018},
   publisher={Wiley Online Library},
   doi={10.1002/per.2155},
+}
+
+@article{hopwood2010should,
+  title={How should the internal structure of personality inventories be evaluated?},
+  author={Hopwood, Christopher J and Donnellan, M Brent},
+  journal={Personality and Social Psychology Review},
+  volume={14},
+  pages={332--346},
+  year={2010},
+  publisher={Sage Publications Sage CA: Los Angeles, CA},
+  doi={10.1177/1088868310361240},
 }
 
 @article{horn1965rationale,
@@ -2796,6 +2988,23 @@ doi = {10.1080/00273171.2020.1779642},
   pages        = {232--254},
   address      = {New York, NY},
   doi = {10.1093/oxfordhb/9780199957996.013.11},
+}
+
+@inproceedings{jun2015human,
+  title={Human memory search as initial-visit emitting random walk},
+  author={Jun, Kwang-Sung and Zhu, Xiaojin and Rogers, Timothy and Yang, Zhuoran and Yuan, Ming},
+  booktitle={Advances in neural information processing systems},
+  editor={Cortes, C and Lawrence, N and Lee, D and Sugiyama, M and Garnett, R},
+  pages={1072--1080},
+  year={2015},
+  url={https://proceedings.neurips.cc/paper/2015/hash/dc6a70712a252123c40d2adba6a11d84-Abstract.html},
+}
+
+
+  editor={Lafferty, J D and Williams, C K I and Shawe-Taylor, J and Zemel, R S and Culotta, A},
+  pages={604--612},
+  year={2010},
+  url={https://papers.nips.cc/paper/4087-extended-bayesian-information-criteria-for-gaussian-graphical-models},
 }
 
 %K
@@ -3033,7 +3242,7 @@ doi = {10.1080/00273171.2020.1779642},
 
 @article{kenett2013semantic,
   title={Semantic Organization in Children with Cochlear Implants: Computational Analysis of Verbal Fluency},
-  author={Kenett, Yoed Nissan and Wechsler-Kashi, Deena and Kenett, Dror Y and Schwartz, Richard G and Ben Jacob, Eshel and Faust, Miriam},
+  author={Kenett, Yoed N and Wechsler-Kashi, Deena and Kenett, Dror Y and Schwartz, Richard G and Ben Jacob, Eshel and Faust, Miriam},
   journal={Frontiers in Psychology},
   volume={4},
   year={2013},
@@ -3159,6 +3368,17 @@ url={https://arxiv.org/abs/1807.04269},
   doi={10.1038/srep34175},
 }
 
+@article{kwapil2018development,
+  title={Development and psychometric properties of the {Multidimensional Schizotypy Scale}: A new measure for assessing positive, negative, and disorganized schizotypy},
+  author={Kwapil, Thomas R and Gross, Georgina M and Silvia, Paul J and Raulin, Michael L and Barrantes-Vidal, Neus},
+  journal={Schizophrenia Research},
+  volume={193},
+  pages={209--217},
+  year={2018},
+  publisher={Elsevier},
+  doi={10.1016/j.schres.2017.07.001},
+}
+
 %L
 
 @article{lancichinetti2009community,
@@ -3191,8 +3411,7 @@ url={https://arxiv.org/abs/1807.04269},
   pages={e0234928},
   year={2020},
   publisher={Public Library of Science San Francisco, CA USA},
-  doi={10.1371/journal.pone.0234928
-},
+  doi={10.1371/journal.pone.0234928},
 }
 
 @book{lauritzen1996graphical,
@@ -3223,6 +3442,14 @@ url={https://arxiv.org/abs/1807.04269},
   year={2018},
   doi={10.1177/1073191116659134},
   publisher={SAGE Publications Sage CA: Los Angeles, CA},
+}
+
+@article{leising2020why,
+  title={Why do items correlate with one another? A conceptual analysis with relevance for general factors and network models},
+  author={Leising, Daniel and Burger, Julian and Zimmermann, Johannes and Bäckström, Martin and Oltmanns, Joshua and Connelly, Brian},
+  journal={PsyArXiv},
+  year={2020},
+  doi={10.31234/osf.io/7c895},
 }
 
 @article{lee2012ordinary,
@@ -3329,6 +3556,17 @@ url={https://arxiv.org/abs/1807.04269},
 }
 
 %M
+
+@article{mackenzie2011construct,
+  author    = {MacKenzie, Scott B and Podsakoff, Philip M and Podsakoff, Nathan P},
+  title     = {Construct measurement and validation procedures in MIS and behavioral research: Integrating new and existing techniques},
+  journal   = {MIS Quarterly},
+  year      = {2011},
+  volume    = {35},
+  pages     = {293--334},
+  publisher = {Society for Information Management and The Management Information Systems},
+  doi={10.2307/23044045 },
+}
 
 @article{mandera2019recognition,
   title={{Recognition times for 62 thousand English words: Data from the English Crowdsourcing Project}},
@@ -3522,8 +3760,9 @@ author = {McCrae, Robert R and Costa, Paul T},
 @article{mccrae2019new,
   author = {McCrae, Robert R and M{\~o}ttus, Ren{\'e}},
   year = {2019},
-  title = {A new psychometrics: What personality scales measure, with implications for theory and assessment},
+  title = {What personality scales measure: A new psychometrics and its implications for theory and assessment },
   journal = {Current Directions in Psychological Science},
+  doi={10.1177/0963721419849559},
 }
 
 @article{mccrae2018five,
@@ -3716,6 +3955,15 @@ author = {McCrae, Robert R and Costa, Paul T},
   publisher = {Erlbaum},
 }
 
+@article{montoya2020poor,
+  title={The poor fit of model fit for selecting number of factors in exploratory factor analysis for scale evaluation},
+  author={Montoya, Amanda K and Edwards, Michael C},
+  journal={Educational and Psychological Measurement},
+  year={2020},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA},
+  doi={10.1177/0013164420942899},
+}
+
 @article{moran2014amuse,
   title={Do {I} amuse you? Asymmetric predictors for humor appreciation and humor production},
   author={Moran, Joseph M and Rain, Marina and Page-Gould, Elizabeth and Mar, Raymond A},
@@ -3865,6 +4113,18 @@ author = {McCrae, Robert R and Costa, Paul T},
   publisher={Springer},
   doi={10.3758/BF03195588},
 }
+
+@article{nesselroade2016some,
+  title={Some behavioral science measurement concerns and proposals},
+  author={Nesselroade, John R and Molenaar, Peter C M},
+  journal={Multivariate Behavioral Research},
+  volume={51},
+  pages={396--412},
+  year={2016},
+  publisher={Taylor \& Francis},
+  doi={10.1080/00273171.2015.1050481},
+}
+
 
 @article{newman2006modularity,
   title={Modularity and community structure in networks},
@@ -4128,7 +4388,7 @@ author = {McCrae, Robert R and Costa, Paul T},
 %Q
 
 @article{quirin2008quick,
-  title={{A quick MST-based algorithm to obtain Pathfinder networks (\(\infty\), n- 1)}},
+  title={{A quick MST-based algorithm to obtain Pathfinder networks (\(\infty\), n - 1)}},
   author={Quirin, Arnaud and Cordón, Oscar and Guerrero-Bote, Vicente P and Vargas-Quesada, Benjamín and Moya-Anegón, Felix},
   journal={Journal of the American Society for Information Science and Technology},
   volume={59},
@@ -4147,22 +4407,6 @@ author = {McCrae, Robert R and Costa, Paul T},
   address = {Vienna, Austria},
   year = {2020},
   url = {https://www.R-project.org/},
-}
-
-@manual{R-knitcitations,
-  title = {{knitcitations}: Citations for 'knitr' Markdown Files},
-  author = {Boettiger, Carl},
-  year = {2017},
-  note = {{R} package version 1.0.8},
-  url = {https://CRAN.R-project.org/package=knitcitations},
-}
-
-@manual{R-papaja,
-  author = {Aust, Frederik and Barth, Marius},
-  title = {{papaja}: {Create} {APA} manuscripts with {R Markdown}},
-  year = {2018},
-  note = {{R} package version 0.1.0.9709},
-  url = {https://github.com/crsh/papaja},
 }
 
 @article{rafols2009diversity,
@@ -4213,6 +4457,28 @@ author = {McCrae, Robert R and Costa, Paul T},
   year={2019},
   publisher={SAGE Publications Sage CA: Los Angeles, CA},
   doi={10.1177/1948550618774772},
+}
+
+@article{ravasz2002hierarchical,
+  title={Hierarchical organization of modularity in metabolic networks},
+  author={Ravasz, Erzs{\'e}bet and Somera, Anna Lisa and Mongru, Dale A and Oltvai, Zolt{\'a}n N and Barab{\'a}si, A-L},
+  journal={science},
+  volume={297},
+  pages={1551--1555},
+  year={2002},
+  publisher={American Association for the Advancement of Science},
+  doi={10.1126/science.1073374},
+}
+
+@article{raykov2008alpha,
+  title={Alpha if item deleted: A note on loss of criterion validity in scale development if maximizing coefficient alpha},
+  author={Raykov, Tenko},
+  journal={British Journal of Mathematical and Statistical Psychology},
+  volume={61},
+  pages={275--285},
+  year={2008},
+  publisher={Wiley Online Library},
+  doi={10.1348/000711007X188520},
 }
 
 @article{read2018virtual,
@@ -4321,7 +4587,7 @@ author = {McCrae, Robert R and Costa, Paul T},
     url = {https://CRAN.R-project.org/package=psych},
   }
   
-@manual{psychtools,
+@manual{psychTools,
     title = {{psychTools}: Tools to Accompany the 'psych' Package for Psychological Research},
     author = {Revelle, William},
     organization = {Northwestern University},
@@ -4330,6 +4596,16 @@ author = {McCrae, Robert R and Costa, Paul T},
     note = {R package version 1.9.12},
     url = {https://CRAN.R-project.org/package=psychTools},
   }
+  
+  @article{revelle2020exploring,
+  title={Exploring the persome: The power of the item in understanding personality structure},
+  author={Revelle, William and Dworak, Elizabeth M and Condon, David M},
+  journal={Personality and Individual Differences},
+  pages={109905},
+  year={2020},
+  publisher={Elsevier},
+  doi={10.1016/j.paid.2020.109905},
+}
   
   @article{revelle1979very,
   title={Very simple structure: An alternative procedure for estimating the optimal number of interpretable factors},
@@ -4340,6 +4616,17 @@ author = {McCrae, Robert R and Costa, Paul T},
   year={1979},
   publisher={Taylor \& Francis},
   doi={10.1207/s15327906mbr1404_2},
+}
+
+@article{rhemtulla2012can,
+  title={When can categorical variables be treated as continuous? A comparison of robust continuous and categorical {SEM} estimation methods under suboptimal conditions},
+  author={Rhemtulla, Mijke and Brosseau-Liard, Patricia {\'E} and Savalei, Victoria},
+  journal={Psychological methods},
+  volume={17},
+  pages={354--373},
+  year={2012},
+  publisher={American Psychological Association},
+  doi={10.1037/a0029315},
 }
 
 @article{rhemtulla2020worse,
@@ -4412,6 +4699,17 @@ author = {McCrae, Robert R and Costa, Paul T},
   year={2018},
   publisher={American Psychological Association},
   doi={10.1037/ccp0000336},
+}
+
+@article{rosenbusch2020semantic,
+  title={{The Semantic Scale Network}: An online tool to detect semantic overlap of psychological scales and prevent scale redundancies.},
+  author={Rosenbusch, Hannes and Wanders, Florian and Pit, Ilse L},
+  journal={Psychological Methods},
+  volume={25},
+  pages={380--392},
+  year={2020},
+  publisher={American Psychological Association},
+  doi={10.1037/met0000244},
 }
 
 @article{lavaan,
@@ -4542,6 +4840,17 @@ author = {McCrae, Robert R and Costa, Paul T},
   publisher = {Guilford Press},
 }
 
+@article{saucier2020high,
+  title={High-dimensionality personality structure in the natural language: Further analyses of classic sets of English-language trait-adjectives.},
+  author={Saucier, Gerard and Iurino, Kathryn},
+  journal={Journal of Personality and Social Psychology},
+  volume={119},
+  pages={1188--1219},
+  year={2020},
+  publisher={American Psychological Association},
+  doi={10.1037/pspp0000273},
+}
+
 @article{saulsman2004five,
   title={The five-factor model and personality disorder empirical literature: A meta-analytic review},
   author={Saulsman, Lisa M and Page, Andrew C},
@@ -4552,6 +4861,14 @@ author = {McCrae, Robert R and Costa, Paul T},
   publisher={Elsevier},
   doi={10.1016/j.cpr.2002.09.001},
 }
+
+@manual{GGally,
+    title = {{GGally: Extension to 'ggplot2'}},
+    author = {Schloerke, Barret and Cook, Di and Larmarange, Joseph and Briatte, Francois and Marbach, Moritz and Thoen, Edwin and Elberg, Amos and Crowley, Jason},
+    year = {2020},
+    note = {R package version 2.0.0},
+    url = {https://CRAN.R-project.org/package=GGally},
+  }
 
 @article{schmidhuber2015deep,
   title={Deep learning in neural networks: An overview},
@@ -4645,7 +4962,7 @@ author = {McCrae, Robert R and Costa, Paul T},
   pages={191--198},
   year={2003},
   publisher={Institute of Mathematical Statistics},
-  url={https://www-jstor-org.libproxy.uncg.edu/stable/3182849 },
+  url={https://www.jstor.org/stable/3182849},
 }
 
 @article{shen2013groupwise,
@@ -4783,6 +5100,29 @@ author = {McCrae, Robert R and Costa, Paul T},
   year={2011},
   publisher={Sage Publications Sage CA: Los Angeles, CA},
   doi={10.1177/0956797611417632},
+}
+
+@article{slocum2009note,
+  title={A note on the dimensionality of quality of life scales: An illustration with the {Satisfaction with Life Scale (SWLS)}},
+  author={Slocum-Gori, Suzanne L and Zumbo, Bruno D and Michalos, Alex C and Diener, Ed},
+  journal={Social Indicators Research},
+  volume={92},
+  number={3},
+  pages={489--496},
+  year={2009},
+  publisher={Springer},
+  doi={10.1007/s11205-008-9303-y},
+}
+
+@article{slocum2011assessing,
+  title={Assessing the unidimensionality of psychological scales: Using multiple criteria from factor analysis},
+  author={Slocum-Gori, Suzanne L and Zumbo, Bruno D},
+  journal={Social Indicators Research},
+  volume={102},
+  pages={443--461},
+  year={2011},
+  publisher={Springer},
+  doi={10.1007/s11205-010-9682-8},
 }
 
 @incollection{smith2009construct,
@@ -5429,6 +5769,7 @@ doi={10.1177/0956797618818476},
   author={Wickham, Hadley},
   year={2016},
   publisher={Springer},
+  address={New York, NY},
   url={https://ggplot2-book.org/},
 }
 
@@ -5637,7 +5978,8 @@ doi={10.1177/0956797618818476},
   volume={5},
   pages={2630--2650},
   year={2011},
-  publisher={NIH Public Access}
+  publisher={NIH Public Access},
+  doi={10.1214/11-AOAS494},
 }
 
 @article{yip2007gene,
@@ -5738,3 +6080,5 @@ doi={10.1177/0956797618818476},
   publisher={American Psychological Association},
   doi={10.1037/0033-2909.99.3.432},
 }
+
+@Comment{jabref-meta: databaseType:biblatex;}
