--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in version 1.3.2
+
+o UPDATE: faster conversion between US and UK spellings
+
+
 Changes in version 1.3.1
 
 o UPDATE: `textcleaner` now allows for either UK or US English spelling
