--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in version 1.3.3
+
+o FIX: `edit` error on Macs, switched to `editData`, and added *editData* dependency
+
 Changes in version 1.3.2
 
 o UPDATE: faster conversion between US and UK spellings
