--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Changes in version 1.3.5
+
+o UPDATE: added parallel processing for large spell checks
+
+o ADD: `textcleaner` functionality for free association response tasks (*hunspell* is used to expedite processing)
+
+
 Changes in version 1.3.4
 
 o FIX: error in getting "automated" data from `textcleaner` into Shiny GUI
